
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ is_scramble ;
 scalar_t__ malloc (scalar_t__) ;
 int memset (char*,char,scalar_t__) ;
 char* shifts ;
 scalar_t__ strlen (char*) ;

char * scramble(char * str)
{
    int i;
    char * s;

    if (is_scramble)
        return (str);
    s = (char *) malloc (strlen (str) + 3);
    memset(s, '\0', strlen(str) + 3);
    *s = 'A';
    for (i = 1; str[i - 1]; i++)
        s[i] = shifts[(unsigned char)(str[i - 1])];
    return (s);
}
